# IVPred

./: .gitignore  Earnings.csv  README.md  Underlying copy.csv  pyproject.toml
ivdyn/: __init__.py  __main__.py
ivdyn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ivdyn/data/: __init__.py  build_surface.py  earnings_extract.py  ivyds_extract.py  loaders.py  schemas.py
ivdyn/eval/: __init__.py  metrics.py  pipeline.py
ivdyn/finance/: __init__.py  black_scholes.py
ivdyn/model/: __init__.py  scalers.py  torch_system.py
ivdyn/surface/: __init__.py  arb.py  build.py
ivdyn/training/: __init__.py  pipeline.py
ivdyn/ui/: app.py
ivdyn/utils/: __init__.py  cli.py  paths.py
outputs/wrds_run_20260225_151956_full_7sym_ld8/02_dataset_JPM/: dataset_preview.parquet  surface_quality_by_date.parquet
reports/latest_runs_snapshot/: README.md  latest_runs_index.json  snapshot_manifest.json
reports/latest_runs_snapshot/JPM/: dataset_meta.json  latest_run_path.txt  metrics.json  train_config.json  train_summary.json
reports/latest_runs_snapshot/NVDA/: dataset_meta.json  latest_run_path.txt  metrics.json  train_config.json  train_summary.json
reports/latest_runs_snapshot/QQQ/: dataset_meta.json  latest_run_path.txt  metrics.json  train_config.json  train_summary.json
reports/latest_runs_snapshot/SPY/: dataset_meta.json  latest_run_path.txt  metrics.json  train_config.json  train_summary.json
reports/latest_runs_snapshot/TLT/: dataset_meta.json  latest_run_path.txt  metrics.json  train_config.json  train_summary.json
(+10 files in other folders)
