[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivdyn"
version = "0.1.0"
description = "End-to-end implied-volatility dynamics modeling from Massive options data"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ivdyn" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "torch>=2.2",
  "matplotlib>=3.8",
  "plotly>=5.20",
  "streamlit>=1.30",
  "altair>=5.0",
  "fastapi>=0.110",
  "uvicorn>=0.28",
  "requests>=2.31",
  "boto3>=1.34",
]

[project.scripts]
ivdyn = "ivdyn.utils.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ivdyn*"]
